<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="child">Child</string>
    <string name="parent">Parent</string>
    <string name="who_uses_this_device">Who uses this device?</string>
    <string name="term_and_conditions">By clicking ‘Continue’, you agree to Mobicip’s <a href=""> Terms &amp;\n Conditions</a> and <a href="www.google.com"> Privacy Policy</a></string>
    <string name="already_account"><a href="">I already have an account</a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="please_enter_the_name">Please enter the name</string>
    <string name="please_enter_the_email">Please enter the email</string>
    <string name="please_enter_the_password">Please enter the password</string>
    <string name="please_enter_the_valid_email">Please enter the valid email</string>
    <string name="please_enter_password_more_than_5_character">Please enter the password more than 5 character</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="continue_text">Continue</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="password_hint">********</string>
    <string name="password_text">Password</string>
    <string name="email_hint">example@domain.com</string>
    <string name="email_text">Email</string>
    <string name="login_text">Login</string>
    <string name="name_text">Name</string>
    <string name="name_hint">Jane</string>
    <string name="set_password_text">Set Password</string>
    <string name="zero">zero</string>
    <string name="please_enter_valid_detail_text">Please enter the valid detail</string>
    <string name="you_can_add_more_child_text">You can add more by clicking \'Add Another \n Child\'.</string>
    <string name="successfully_added_child_user_text">Successfully added child user</string>
    <string name="next_text">Next</string>
    <string name="add_another_child_text">Add Another Child</string>
    <string name="add_a_child_text">Add a Child</string>
    <string name="note_in_add_addChild"><b> Note:</b> You can customize your child screentime, schedules, social media, app and web filter setting on your parent dashboard</string>
    <string name="monitor_only_No_restrictions_text"><b>Monitor only</b> \n No restrictions. Track all usage patterns.</string>
    <string name="monitor_and_manage_content_and_screen_text"><b>Monitor and manage</b> \n Manage content and screentime along with tracking. Mobicip filters the unsafe content based on your child’s age for this mode</string>
    <string name="your_child_s_name_text">Your child\'s name</string>
    <string name="sam_text">Sam</string>
    <string name="age_text">Age</string>
    <string name="ten">10</string>
    <string name="what_do_you_want_to_do_with_this_child_profile">What do you want to do with this child profile?</string>
    <string name="done_text">Done</string>
    <string name="monitor_only_text">Monitor Only</string>
    <string name="monitor_and_manage_text">Monitor and Manage</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>