<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.myfirstapplication.login.LoginViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">



    <ImageView
        android:id="@+id/back_button_in_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_Top"
        android:padding="5dp"
        android:src="@drawable/ic_icon_24_back"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_text_in_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_of_signup_login"
        android:text="@string/login_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_of_signup_login_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/back_button_in_login"
        app:layout_constraintTop_toBottomOf="@id/back_button_in_login" />

    <TextView
        android:id="@+id/email_text_in_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_name_email"
        android:letterSpacing="0.08"
        android:text="@string/email_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/email_text_size"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/login_text_in_login"
        app:layout_constraintTop_toBottomOf="@id/login_text_in_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_edit_text_input_layout_in_login"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/view_margin_End"
        app:boxCornerRadiusBottomStart="@dimen/text_input_layout_corner_radius"
        app:boxCornerRadiusBottomEnd="@dimen/text_input_layout_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/text_input_layout_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/text_input_layout_corner_radius"
        app:boxStrokeWidth="@dimen/zero_dp"
        app:boxStrokeWidthFocused="@dimen/zero_dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/email_text_in_login"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text_in_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           android:backgroundTint="@color/edit_text_color"
            android:textSize="@dimen/text_input_edit_text_size"
            android:padding="@dimen/text_input_edit_text_padding"
            android:hint="@string/email_hint"
            android:text="@={viewModel.edEmail}"
            android:inputType="textEmailAddress"
            android:textColor="@color/edit_text_input_color" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/password_text_in_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between"
        android:letterSpacing="0.08"
        android:text="@string/password_text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/email_text_size"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text_input_layout_in_login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edit_text_input_layout_in_login"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/view_margin_End"
        app:boxCornerRadiusBottomStart="@dimen/text_input_layout_corner_radius"
        app:boxCornerRadiusBottomEnd="@dimen/text_input_layout_corner_radius"
        app:boxCornerRadiusTopEnd="@dimen/text_input_layout_corner_radius"
        app:boxCornerRadiusTopStart="@dimen/text_input_layout_corner_radius"
        app:boxStrokeWidth="@dimen/zero_dp"
        app:boxStrokeWidthFocused="@dimen/zero_dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="@id/password_text_in_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_in_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text_in_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/edit_text_color"
            android:textSize="@dimen/text_input_edit_text_size"
            android:padding="@dimen/text_input_edit_text_padding"
            android:hint="@string/password_hint"
            android:text="@={viewModel.edPassword}"
            android:inputType="textPassword"
            android:textColor="@color/edit_text_input_color" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/forgot_password_text_in_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_forgot_password"
        android:text="@string/forgot_password_text"
        android:letterSpacing="0.1"
        android:textColor="@color/button_color"
        android:textSize="@dimen/text_size"
        app:layout_constraintStart_toStartOf="@id/password_edit_text_input_layout_in_login"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text_input_layout_in_login" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button_in_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/continue_button_margin_start_and_end"
        android:layout_marginEnd="@dimen/continue_button_margin_start_and_end"
        android:layout_marginBottom="@dimen/bottom_margin_continue_button"
        android:padding="@dimen/continue_button_padding"
        android:text="@string/continue_text"
        app:backgroundTint="@color/button_color"
        android:onClick="@{()->viewModel.onContinueButtonClick()}"
        app:cornerRadius="@dimen/continue_button_radius"
        app:layout_constraintBottom_toTopOf="@id/sign_up_text_in_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_text_in_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_from_bottom"
        android:text="@string/sign_up_text"
        android:textColor="@color/button_color"
        android:textSize="@dimen/text_size"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/view_margin_Start" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>



