<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.myfirstapplication.children.ChildrenViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="@+id/add_another_child"
        app:layout_constraintStart_toEndOf="@+id/add_another_child"
        tools:context=".children.ChildrenFragment">

        <ImageView
            android:id="@+id/back_button_in_children"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin_Top"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_icon_24_back"
            app:layout_constraintStart_toStartOf="@id/guideline1_children"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/successfully_added_text_in_children"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin_of_signup_login"
            android:layout_marginEnd="@dimen/view_margin_End"
            android:text="@string/successfully_added_child_user_text"
            android:textColor="#1f2024"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/guideline1_children"
            app:layout_constraintTop_toBottomOf="@id/back_button_in_children" />

        <TextView
            android:id="@+id/you_can_add_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin_Start"
            android:layout_marginTop="@dimen/top_margin_name_email"
            android:layout_marginEnd="@dimen/view_margin_End"
            android:lineSpacingExtra="4sp"
            android:text="@string/you_can_add_more_child_text"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/successfully_added_text_in_children" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recycler_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/add_another_child"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/you_can_add_more">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_view_in_children"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constrainedHeight="true"
                tools:itemCount="1"
                tools:listitem="@layout/recycleview_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/add_another_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_add_button_icon"
            android:gravity="center"
            android:lineSpacingExtra="6sp"
            android:text="@string/add_another_child_text"
            android:textColor="@color/button_color"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/next_button_in_children"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_container" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button_in_children"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/continue_button_margin_start_and_end"
            android:layout_marginEnd="@dimen/continue_button_margin_start_and_end"
            android:layout_marginBottom="20dp"
            android:padding="@dimen/continue_button_padding"
            android:text="@string/next_text"
            android:textAllCaps="false"
            app:backgroundTint="@color/button_color"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1_children"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/view_margin_Start" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>